--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test github actions for a ci workflow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/neniman/ci-github-actions-test/issues"
   },
-  "homepage": "https://github.com/neniman/ci-github-actions-test#readme"
+  "homepage": "https://github.com/neniman/ci-github-actions-test#readme",
+  "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2"
+  }
 }
