--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test github actions for a ci workflow",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "mocha --reporter spec"
   },
   "repository": {
@@ -19,5 +20,8 @@
   "dependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.2"
+  },
+  "devDependencies": {
+    "typescript": "^3.8.3"
   }
 }
