--- a/.github/workflows/workflow-ci-all-os.yml
+++ b/.github/workflows/workflow-ci-all-os.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: CI Workflow for all OSs triggered by a webhook
+name: Node.js CI for all OS
 
 on:
   push:
